App2/comment-service/k8s/comment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: comment-service
