App2/comment-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
  - host: blog.example.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 5000
      - path: /comments
        pathType: Prefix
        backend:
          service:
            name: comment-service
            port:
              number: 5000
